Change Metro Project

--- a/projekty/metro/css/bootstrap.css
+++ b/projekty/metro/css/bootstrap.css
@@ -4,7 +4,6 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&subset=latin-ext");
 :root {
   --blue:#007bff;
   --indigo:#6610f2;
@@ -8927,647 +8926,4 @@ a.text-dark:focus, a.text-dark:hover {
     border-color: #dee2e6;
   }
 }
-@font-face {
-  font-family: 'Gotham Ultra';
-  src: url("../webfonts/subset-Gotham-Ultra.woff2") format("woff2"), url("../webfonts/subset-Gotham-Ultra.woff") format("woff"), url("../webfonts/subset-Gotham-Ultra.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Gotham Book';
-  src: url("../webfonts/subset-Gotham-Book.woff2") format("woff2"), url("../webfonts/subset-Gotham-Book.woff") format("woff"), url("../webfonts/subset-Gotham-Book.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Gotham Bold';
-  src: url("../webfonts/subset-Gotham-Bold.woff2") format("woff2"), url("../webfonts/subset-Gotham-Bold.woff") format("woff"), url("../webfonts/subset-Gotham-Bold.ttf") format("truetype");
-  font-weight: bold;
-  font-style: normal;
-}
-
-.x-p-0 {
-  padding: 0px;
-}
-
-.x-pt-0 {
-  padding-top: 0px;
-}
-
-.x-pb-0 {
-  padding-bottom: 0px;
-}
-
-.x-pl-0 {
-  padding-left: 0px;
-}
-
-.x-pr-0 {
-  padding-right: 0px;
-}
-
-.x-p-10 {
-  padding: 10px;
-}
-
-.x-pt-10 {
-  padding-top: 10px;
-}
-
-.x-pb-10 {
-  padding-bottom: 10px;
-}
-
-.x-pl-10 {
-  padding-left: 10px;
-}
-
-.x-pr-10 {
-  padding-right: 10px;
-}
-
-.x-p-20 {
-  padding: 20px;
-}
-
-.x-pt-20 {
-  padding-top: 20px;
-}
-
-.x-pb-20 {
-  padding-bottom: 20px;
-}
-
-.x-pl-20 {
-  padding-left: 20px;
-}
-
-.x-pr-20 {
-  padding-right: 20px;
-}
-
-.x-p-30 {
-  padding: 30px;
-}
-
-.x-pt-30 {
-  padding-top: 30px;
-}
-
-.x-pb-30 {
-  padding-bottom: 30px;
-}
-
-.x-pl-30 {
-  padding-left: 30px;
-}
-
-.x-pr-30 {
-  padding-right: 30px;
-}
-
-.x-p-40 {
-  padding: 40px;
-}
-
-.x-pt-40 {
-  padding-top: 40px;
-}
-
-.x-pb-40 {
-  padding-bottom: 40px;
-}
-
-.x-pl-40 {
-  padding-left: 40px;
-}
-
-.x-pr-40 {
-  padding-right: 40px;
-}
-
-.x-p-50 {
-  padding: 50px;
-}
-
-.x-pt-50 {
-  padding-top: 50px;
-}
-
-.x-pb-50 {
-  padding-bottom: 50px;
-}
-
-.x-pl-50 {
-  padding-left: 50px;
-}
-
-.x-pr-50 {
-  padding-right: 50px;
-}
-
-.x-p-60 {
-  padding: 60px;
-}
-
-.x-pt-60 {
-  padding-top: 60px;
-}
-
-.x-pb-60 {
-  padding-bottom: 60px;
-}
-
-.x-pl-60 {
-  padding-left: 60px;
-}
-
-.x-pr-60 {
-  padding-right: 60px;
-}
-
-.x-p-70 {
-  padding: 70px;
-}
-
-.x-pt-70 {
-  padding-top: 70px;
-}
-
-.x-pb-70 {
-  padding-bottom: 70px;
-}
-
-.x-pl-70 {
-  padding-left: 70px;
-}
-
-.x-pr-70 {
-  padding-right: 70px;
-}
-
-.x-p-80 {
-  padding: 80px;
-}
-
-.x-pt-80 {
-  padding-top: 80px;
-}
-
-.x-pb-80 {
-  padding-bottom: 80px;
-}
-
-.x-pl-80 {
-  padding-left: 80px;
-}
-
-.x-pr-80 {
-  padding-right: 80px;
-}
-
-.x-p-90 {
-  padding: 90px;
-}
-
-.x-pt-90 {
-  padding-top: 90px;
-}
-
-.x-pb-90 {
-  padding-bottom: 90px;
-}
-
-.x-pl-90 {
-  padding-left: 90px;
-}
-
-.x-pr-90 {
-  padding-right: 90px;
-}
-
-.x-p-100 {
-  padding: 100px;
-}
-
-.x-pt-100 {
-  padding-top: 100px;
-}
-
-.x-pb-100 {
-  padding-bottom: 100px;
-}
-
-.x-pl-100 {
-  padding-left: 100px;
-}
-
-.x-pr-100 {
-  padding-right: 100px;
-}
-
-.x-p-110 {
-  padding: 110px;
-}
-
-.x-pt-110 {
-  padding-top: 110px;
-}
-
-.x-pb-110 {
-  padding-bottom: 110px;
-}
-
-.x-pl-110 {
-  padding-left: 110px;
-}
-
-.x-pr-110 {
-  padding-right: 110px;
-}
-
-.x-p-120 {
-  padding: 120px;
-}
-
-.x-pt-120 {
-  padding-top: 120px;
-}
-
-.x-pb-120 {
-  padding-bottom: 120px;
-}
-
-.x-pl-120 {
-  padding-left: 120px;
-}
-
-.x-pr-120 {
-  padding-right: 120px;
-}
-
-.x-p-130 {
-  padding: 130px;
-}
-
-.x-pt-130 {
-  padding-top: 130px;
-}
-
-.x-pb-130 {
-  padding-bottom: 130px;
-}
-
-.x-pl-130 {
-  padding-left: 130px;
-}
-
-.x-pr-130 {
-  padding-right: 130px;
-}
-
-.x-p-140 {
-  padding: 140px;
-}
-
-.x-pt-140 {
-  padding-top: 140px;
-}
-
-.x-pb-140 {
-  padding-bottom: 140px;
-}
-
-.x-pl-140 {
-  padding-left: 140px;
-}
-
-.x-pr-140 {
-  padding-right: 140px;
-}
-
-.x-p-150 {
-  padding: 150px;
-}
-
-.x-pt-150 {
-  padding-top: 150px;
-}
-
-.x-pb-150 {
-  padding-bottom: 150px;
-}
-
-.x-pl-150 {
-  padding-left: 150px;
-}
-
-.x-pr-150 {
-  padding-right: 150px;
-}
-
-.x-100 {
-  max-width: 100%;
-}
-
-.x-75 {
-  max-width: 75%;
-}
-
-.x-50 {
-  max-width: 50%;
-}
-
-.x-25 {
-  max-width: 25%;
-}
-
-.x-tcenter {
-  text-align: center;
-}
-
-.x-tleft {
-  text-align: left;
-}
-
-.x-tright {
-  text-align: right;
-}
-
-.x-tjust {
-  text-align: justify;
-}
-
-.x-prel {
-  position: relative;
-}
-
-.x-pabs {
-  position: absolute;
-}
-
-.x-pfix {
-  position: fixed;
-}
-
-.x-block {
-  display: block;
-}
-
-.x-flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.x-iblock {
-  display: inline-block;
-}
-
-.x-inline {
-  display: inline;
-}
-
-.x-decor-font {
-  color: #c09b57;
-}
-
-html, body {
-  padding: 0;
-  margin: 0;
-  font: 400 10px/1.3 "Gotham Book", Arial, sans-serif;
-}
-
-a, button, input, img {
-  outline: 0;
-}
-
-a:hover, a:active, button:hover, button:active, input:hover, input:active, img:hover, img:active {
-  outline: 0;
-}
-
-.x-home {
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
-}
-
-@media (max-width: 968px) {
-  .x-home {
-    height: 40vh;
-  }
-}
-
-.x-slider {
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
-}
-
-@media (max-width: 968px) {
-  .x-slider {
-    height: 40vh;
-  }
-}
-
-.x-slider__item {
-  height: 100vh;
-  position: relative;
-}
-
-@media (max-width: 968px) {
-  .x-slider__item {
-    height: 40vh;
-  }
-}
-
-.x-slider img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: top center;
-     object-position: top center;
-}
-
-.x-slider__grid {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.x-slider__col {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 8.3333333%;
-          flex: 1 1 8.3333333%;
-  height: 100vh;
-  border-right: 1px solid rgba(255, 255, 255, 0.2);
-  background: rgba(0, 0, 0, 0.8);
-  -webkit-transition: all 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-  transition: all 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-  position: relative;
-}
-
-@media (max-width: 968px) {
-  .x-slider__col {
-    height: 40vh;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 16.666666%;
-            flex: 0 0 16.666666%;
-  }
-}
-
-.x-slider__col:hover, .x-slider__col:active {
-  background: rgba(0, 0, 0, 0.7);
-  -webkit-transition: all 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-  transition: all 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-}
-
-.x-slider__rect {
-  position: absolute;
-  width: 2px;
-  height: 20px;
-  background: #fff;
-  right: 0;
-  top: 120%;
-  opacity: 1;
-  -webkit-transition: all 0s ease 0s;
-  transition: all 0s ease 0s;
-}
-
-.x-slider__title {
-  position: absolute;
-  left: 8.3333%;
-  top: 50%;
-  -webkit-transform: translateY(-40%);
-          transform: translateY(-40%);
-  z-index: 1000;
-  color: #fff;
-  opacity: 0;
-  -webkit-transition: all .3s ease 0s;
-  transition: all .3s ease 0s;
-  pointer-events: none;
-  font-family: 'Gotham Bold';
-  line-height: 1.4;
-}
-
-.x-slider__title.x-act {
-  opacity: 1;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  -webkit-transition: all .5s ease .5s;
-  transition: all .5s ease .5s;
-}
-
-.x-slider__title.x-act .x-link {
-  pointer-events: auto;
-}
-
-.x-slider__title h2 {
-  font-size: 6.8rem;
-}
-
-.x-slider__title h2 span {
-  color: #c09b57;
-}
-
-@media (max-width: 968px) {
-  .x-slider__title h2 {
-    font-size: 3.2rem;
-  }
-}
-
-@media (max-width: 768px) {
-  .x-slider__title h2 {
-    font-size: 2.6rem;
-  }
-}
-
-@media (max-width: 540px) {
-  .x-slider__title h2 {
-    font-size: 2rem;
-  }
-}
-
-.x-slider__title p {
-  font-family: 'Gotham Book';
-  font-size: 3.1rem;
-  margin: 30px 0;
-}
-
-@media (max-width: 968px) {
-  .x-slider__title p {
-    font-size: 2.1rem;
-    margin: 20px 0;
-  }
-}
-
-@media (max-width: 768px) {
-  .x-slider__title p {
-    font-size: 1.7rem;
-    margin: 10px 0;
-  }
-}
-
-@media (max-width: 540px) {
-  .x-slider__title p {
-    font-size: 1.3rem;
-  }
-}
-
-.x-move .x-slider__rect {
-  -webkit-transition: all .6s ease .3s;
-  transition: all .6s ease .3s;
-  top: -30%;
-}
-
-.x-link {
-  border-radius: 2px;
-  background-color: rgba(255, 255, 255, 0.03);
-  border: solid 3px #c09b57;
-  display: inline-block;
-  pointer-events: auto;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-  padding: 18px 55px;
-  line-height: 1;
-  font-size: 2rem;
-  text-transform: uppercase;
-  color: #c09b57;
-  font-family: 'Gotham Book';
-  margin: 20px 0;
-}
-
-.x-link--events-stop {
-  pointer-events: none;
-}
-
-@media (max-width: 968px) {
-  .x-link {
-    font-size: 1.6rem;
-    padding: 12px 35px;
-    margin: 12px 0;
-  }
-}
-
-@media (max-width: 768px) {
-  .x-link {
-    font-size: 1.4rem;
-    padding: 12px 35px;
-  }
-}
-
-.x-link:hover, .x-link:active {
-  background-color: #c09b57;
-  color: #fff;
-  text-decoration: none;
-}
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=bootstrap.css.map */
