--- a/projekty/metro/css/utils.scss
+++ b/projekty/metro/css/utils.scss
@@ -1,9 +1,39 @@
 @import 'bootstrap';
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&subset=latin-ext');
+@font-face {
+    font-family: 'Gotham Ultra';
+    src: url('../webfonts/subset-Gotham-Ultra.woff2') format('woff2'),
+        url('../webfonts/subset-Gotham-Ultra.woff') format('woff'),
+        url('../webfonts/subset-Gotham-Ultra.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Gotham Book';
+    src: url('../webfonts/subset-Gotham-Book.woff2') format('woff2'),
+        url('../webfonts/subset-Gotham-Book.woff') format('woff'),
+        url('../webfonts/subset-Gotham-Book.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Gotham Bold';
+    src: url('../webfonts/subset-Gotham-Bold.woff2') format('woff2'),
+        url('../webfonts/subset-Gotham-Bold.woff') format('woff'),
+        url('../webfonts/subset-Gotham-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+$baseFont: 'Gotham Book';
+
 $baseFontColor: #000;
-$lightFontColor: #000;
+$lightFontColor: #fff;
 $darkFontColor: #000;
-$decorFontColor: #000;
+$decorFontColor: #c09b57;
 
 $baseColor: #000;
 $lightColor: #000;
@@ -107,4 +137,5 @@ $mediaXS: 540px;
 .x-flex {display: flex;}
 .x-iblock {display: inline-block;}
 .x-inline {display: inline;}
+.x-decor-font {color: $decorFontColor;}
 
