--- a/projekty/metro/css/style.scss
+++ b/projekty/metro/css/style.scss
@@ -14,13 +14,114 @@ a, button, input, img {
   }
 }
 
+.x-main-nav {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 10000;
+  display: flex;
+  align-items: center;
+
+  &__btn {
+    @include resetButton();
+    background: $lightFontColor;
+    position: relative;
+    width: 111px;
+    height: 111px;
+    transition: all .3s;
+    
+    &:hover, &:active {
+      background: $decorFontColor;
+    }
+
+    @include media-max-m() {
+      flex-shrink: 0;
+      width: 60px;
+      height: 60px;
+    }
+
+    @include media-max-s() {
+      flex-shrink: 0;
+      width: 50px;
+      height: 50px;
+    }
+  }
+  
+  &__home, &__mail {
+    padding: 0 40px;
+  }
+
+  &__home, &__mail {
+    flex-shrink: 0;
+    @include media-max-m() {
+      padding: 0 15px;
+      svg {
+        width: 130px;
+      }
+    }
+  }
+
+  &__mail {
+    @include media-max-m() {
+      svg {
+        width: 20px;
+      }
+    }
+  }
+  
+  &__mail {
+    flex-grow: 1;
+    text-align: right;
+    transition: all .3s;
+
+    path, polygon {
+      transition: all .3s;
+    }
+
+    &:hover, &:active {
+      path, polygon {
+        fill: $decorFontColor;
+      }
+    }
+  }
+}
+
+.x-lines {
+  width: 60%;
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+
+  &__item {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 100%;
+    height: 2px;
+    background: $baseFontColor;
+
+    &:nth-of-type(2) {
+      top: calc(50% - 8px);
+    }
+
+    &:nth-of-type(3) {
+      top: calc(50% + 8px);
+    }
+  }
+}
+
+
 .x-home {
   height: 100vh;
   overflow: hidden;
   position: relative;
 
   @include media-max-m() {
-    height: 40vh;
+    height: 60vh;
   }
 }
 
@@ -30,7 +131,7 @@ a, button, input, img {
   position: relative;
 
   @include media-max-m() {
-    height: 40vh;
+    height: 60vh;
   }
   
   &__item {
@@ -38,7 +139,7 @@ a, button, input, img {
     position: relative;
 
     @include media-max-m() {
-      height: 40vh;
+      height: 60vh;
     }
   }
 
@@ -47,6 +148,10 @@ a, button, input, img {
     height: 100%;
     object-fit: cover;
     object-position: top center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
   }
 
   &__grid {
@@ -68,7 +173,7 @@ a, button, input, img {
     position: relative;
 
     @include media-max-m() {
-      height: 40vh;
+      height: 60vh;
       flex: 0 0 16.666666%;
     }
     
@@ -84,13 +189,13 @@ a, button, input, img {
     height: 20px;
     background: #fff;
     right: 0;
+    opacity: .7;
     // top: 30%;
     top: 120%;
-    opacity: 1;
     transition: all 0s ease 0s;
   }
 
-  &__title {
+  &__title, &__logo {
     position: absolute;
     left: 8.3333%;
     top: 50%;
@@ -129,7 +234,7 @@ a, button, input, img {
       }
 
       @include media-max-xs() {
-        font-size: 2rem;
+        font-size: 1.8rem;
       }
     }
 
@@ -149,8 +254,30 @@ a, button, input, img {
       }
 
       @include media-max-xs() {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
       }
+    }
+  }
+
+  &__logo {
+    left: auto;
+    top: auto;
+    transform: none;
+    right: 3%;
+    bottom: 4%;
+    text-align: right;
+
+    img {
+      max-width: 100%;
+
+      @include media-max-m() {
+        max-width: 60%;
+      }
+    }
+
+    &.x-act {
+      transform: translateY(-50%);      
+      transition: all .5s ease .8s;
     }
   }
 }
@@ -160,6 +287,16 @@ a, button, input, img {
     &__rect {
       transition: all .6s ease .3s;
       top: -30%;
+    }
+  }
+}
+
+.x-anim {
+  &.x-slider {
+    &__item {
+      img {
+        animation: zoomIn 7.15s linear infinite 0s;
+      }
     }
   }
 }
@@ -198,6 +335,25 @@ a, button, input, img {
     background-color: $decorFontColor;
     color: $lightFontColor;
     text-decoration: none;
+  }
+}
+
+.x-scroll-down {
+  @include resetButton();
+  z-index: 10000;
+  position: absolute;
+  left: 8.333333%;
+  bottom: 5%;
+
+  @include media-max-l() {
+    bottom: 3%;
+    svg {
+      width: 30px;
+    }
+  }
+
+  @include media-max-s() {
+    display: none;
   }
 }
 
